Fix premium required banner button horizontal position on mobile
[MAILPOET-3083]

--- a/assets/css/src/components/_premium_required.scss
+++ b/assets/css/src/components/_premium_required.scss
@@ -29,4 +29,5 @@
 .mailpoet-premium-required-button {
   grid-column: 2 / span 1;
   place-self: center;
+  text-align: center;
 }
